--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <base href="/">
   </head>
   <body>
-    <button id="trigger">Trigger request to Word.</button>
+    <button id="authorize">Authorize Handler</button>
+    <button id="trigger">Request Word Input</button>
   </body>
 
   <script src="https://code.jquery.com/jquery-3.1.1.js"
