--- a/public/cloud.html
+++ b/public/cloud.html
@@ -48,8 +48,6 @@
             data: data
         };
 
-        //document.title = action + ' - ' + JSON.stringify(optionsObj);
-
         if (action) {
             switch (action) {
               //prep as needed, or just send raw data to app
@@ -61,7 +59,7 @@
         console.log(e);
     }
 
-    //window.close();
+    window.close();
 
 </script>
 </body>
