--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <body>
     <button id="authorize">Authorize Handler</button>
     <button id="trigger">Request Word Input</button>
+    <br /> <!-- ik, in a real env this would be css. -->
+    <div id="response-region"></div>
   </body>
 
   <script src="https://code.jquery.com/jquery-3.1.1.js"
